# discord-rs

./: Cargo.toml
src/: lib.rs
