[package]
name = "discord-rs"
version = "0.1.0"
edition = "2021"
authors = ["InfoX1337 <support@xconnect.cc>", "olix3001 <oliwier.michalik9@gmail.com>"]
description = "A Discord API rust implementation"
repository = "https://github.com/xStudios-one/discord-rs"
license = "CC-BY-NC-SA-4.0"
keywords = ["discord", "discordbots"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
